[package]
name = "convoluted-mirror"
version = "0.1.0"
authors = ["roberto.torres <ts.roberto@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.67"

[dependencies.web-sys]
version = "0.3.40"
features = [
  'ImageData',
  'console',
  'HtmlCanvasElement',
  'HtmlVideoElement',
  'CanvasRenderingContext2d'
]